# tom_nonlocalizedevents

./: .gitignore  MANIFEST.in  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflows/: github-release.yml  pypi-release.yml  run-canary-tests.yml  run-tests.yml
templates/tom_common/: base.html
tom_nonlocalizedevents/: __init__.py  admin.py  apps.py  healpix_utils.py  ingestion.py  models.py  serializers.py  urls.py  views.py
tom_nonlocalizedevents/alertstream_handlers/: gcn_event_handler.py  gw_event_handler.py  igwn_event_handler.py
tom_nonlocalizedevents/handlers/: gw_event_handler.py
tom_nonlocalizedevents/signals/: handlers.py
tom_nonlocalizedevents/static/tom_nonlocalizedevents/vue/css/: superevent_vue_app.css
tom_nonlocalizedevents/static/tom_nonlocalizedevents/vue/js/: superevent_vue_app.js
tom_nonlocalizedevents/templates/tom_nonlocalizedevents/: detail.html  index.html  superevent_vue_app.html
tom_nonlocalizedevents/templates/tom_nonlocalizedevents/nonlocalizedevent_detail/: gamma_ray_burst.html  gravitational_wave.html  neutrino.html
tom_nonlocalizedevents/tests/: factories.py  tests.py
tom_nonlocalizedevents_base/: settings.py
tom_nonlocalizedevents_vue/: package-lock.json  package.json  vue.config.js
tom_nonlocalizedevents_vue/src/: SupereventDetail.vue  SupereventSequences.vue  superevent.js
tom_nonlocalizedevents_vue/src/assets/css/: superevent.css
tom_nonlocalizedevents_vue/src/components/: AddCandidateModal.vue  AlertsTable.vue  CandidateTargetTable.vue  CreateTargetModal.vue  GravitationalWaveBanner.vue  index.js
tom_nonlocalizedevents_vue/src/vuex/: vuex_module_counter.js  vuex_store_as_plugin.js
tom_superevent/: admin.py  apps.py  models.py  urls.py  views.py
tom_superevent/migrations/: 0002_superevent.py
tom_superevent/templates/tom_superevent/: index.html
tom_superevents/: models.py  serializers.py  urls.py  views.py
tom_superevents/migrations/: 0006_auto_20210827_2346.py  0006_eventcandidate.py
tom_superevents/static/tom_superevents/css/: main.css
tom_superevents/superevent_clients/: gracedb.py  gravitational_wave.py
tom_superevents/templates/tom_superevents/: index.html
tom_superevents/templates/tom_superevents/partials/: alert_table.html
tom_superevents/templates/tom_superevents/superevent_detail/: gamma_ray_burst.html  gravitational_wave.html  gravitational_wave_event.html
tom_superevents/templatetags/: superevent_extras.py
tom_superevents/tests/: boot_django.py  django_shell.py  run_tests.py  tests.py
tom_superevents_base/: settings.py  urls.py
