[metadata]
name = tom_superevent
version = 0.1
description = Reusable TOMToolkit app to support gravitational wave superevent EM follow-up observations.
long_description = file: README.md
url = https://github.com/TOMToolkit/tom_superevent
author = William Lindstrom
author = David Collom
author_email = {llindstrom,dcollom}@lco.global
license = GPL-3.0 License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
include_package_data = true
packages = find:


[aliases]
test = pytest


[flake8]
exclude =
    setup.py,
    __pycache__,
    .eggs/,
    .git/,
    build/,
    doc/
per-file-ignores =
	__init__.py:F401
