[metadata]
name = tom_superevents
version = 0.1
description = Reusable TOMToolkit app to support gravitational wave superevent EM follow-up observations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TOMToolkit/tom_superevents
author = TOM Toolkit Project
author_email = {llindstrom,dcollom}@lco.global
license = GPL-3.0 License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
keywords =
    tomtoolkit
    astronomy
    astrophysics
    cosmology
    science

[options]
install_requires =
    tomtoolkit >= 2.4
include_package_data = true
packages = find:

[options.extras_require]
test =
    factory_boy ~= 3.1.0
    pytest >= 3.0.3

[aliases]
test = pytest


[flake8]
exclude =
    setup.py,
    __pycache__,
    .eggs/,
    .git/,
    build/,
    doc/
per-file-ignores =
	__init__.py:F401
